// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KibanaSolutionAvatar renders 1`] = `
<EuiAvatar
  color="plain"
  css="unknown styles"
  iconType="logoElastic"
  name="Solution"
/>
`;

exports[`KibanaSolutionAvatar renders 2`] = `
<EuiAvatar
  color="plain"
  css="unknown styles"
  iconType="logoElasticStack"
  name="Elastic Stack"
/>
`;
